--- a/index.html
+++ b/index.html
@@ -122,7 +122,11 @@
       </div>
     </section>
     <!-- parallax -->
-
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="img/stars.jpg" alt="" class="responsive-img" />
+      </div>
+    </div>
     <!-- services / tabs -->
 
     <!-- parallax -->
@@ -138,6 +142,7 @@
       $(document).ready(function () {
         $(".sidenav").sidenav();
         $(".materialboxed").materialbox();
+        $(".parallax").parallax();
       });
     </script>
   </body>
