add the content

--- a/index.html
+++ b/index.html
@@ -128,11 +128,66 @@
       </div>
     </div>
     <!-- services / tabs -->
+    <div class="container">
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+        ea quod dolor eos ut saepe consequuntur numquam. Minus eos, mollitia
+        doloremque, reprehenderit molestias asperiores ab quas expedita maiores,
+        rerum modi.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+        ea quod dolor eos ut saepe consequuntur numquam. Minus eos, mollitia
+        doloremque, reprehenderit molestias asperiores ab quas expedita maiores,
+        rerum modi.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+        ea quod dolor eos ut saepe consequuntur numquam. Minus eos, mollitia
+        doloremque, reprehenderit molestias asperiores ab quas expedita maiores,
+        rerum modi.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+        ea quod dolor eos ut saepe consequuntur numquam. Minus eos, mollitia
+        doloremque, reprehenderit molestias asperiores ab quas expedita maiores,
+        rerum modi.
+      </p>
+    </div>
 
     <!-- parallax -->
-
+    <div class="parallax-container">
+      <div class="parallax">
+        <img src="img/stars.jpg" alt="" class="responsive-img" />
+      </div>
+    </div>
     <!-- contact form -->
-
+    <div class="container">
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+        ea quod dolor eos ut saepe consequuntur numquam. Minus eos, mollitia
+        doloremque, reprehenderit molestias asperiores ab quas expedita maiores,
+        rerum modi.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+        ea quod dolor eos ut saepe consequuntur numquam. Minus eos, mollitia
+        doloremque, reprehenderit molestias asperiores ab quas expedita maiores,
+        rerum modi.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+        ea quod dolor eos ut saepe consequuntur numquam. Minus eos, mollitia
+        doloremque, reprehenderit molestias asperiores ab quas expedita maiores,
+        rerum modi.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus
+        ea quod dolor eos ut saepe consequuntur numquam. Minus eos, mollitia
+        doloremque, reprehenderit molestias asperiores ab quas expedita maiores,
+        rerum modi.
+      </p>
+    </div>
     <!-- footer -->
 
     <!-- Compiled and minified JavaScript -->
