--- a/index.html
+++ b/index.html
@@ -251,7 +251,35 @@
       </div>
     </section>
     <!-- footer -->
-
+    <footer class="page-footer grey darken-3">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 l6">
+            <h5>About Me</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Voluptatibus ea quod dolor eos ut saepe consequuntur numquam.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Voluptatibus ea quod dolor eos ut saepe consequuntur numquam.
+            </p>
+          </div>
+          <div class="col s12 l4 offset-l2">
+            <h5>Connect</h5>
+            <ul>
+              <li><a href="" class="grey-text text-lighten-3">Facebook</a></li>
+              <li><a href="" class="grey-text text-lighten-3">Twitter</a></li>
+              <li><a href="" class="grey-text text-lighten-3">LinkedIn</a></li>
+              <li><a href="" class="grey-text text-lighten-3">Instagram</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-copyright grey darken-4">
+        <div class="container center-align">&copy;2020 star</div>
+      </div>
+    </footer>
     <!-- Compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
