--- a/index.html
+++ b/index.html
@@ -60,6 +60,33 @@
             <li><a href="#">About</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
+            <li>
+              <a
+                href="#"
+                class="btn-floating btn-small indigo darken-4 tooltipped"
+                data-tooltip="This is instagram"
+              >
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="#"
+                class="btn-floating btn-small indigo darken-4 tooltipped"
+                data-tooltip="This is Facebook"
+              >
+                <i class="fab fa-facebook"></i>
+              </a>
+            </li>
+            <li>
+              <a
+                href="#"
+                class="btn-floating btn-small indigo darken-4 tooltipped"
+                data-tooltip="This is twitter"
+              >
+                <i class="fab fa-twitter"></i>
+              </a>
+            </li>
           </ul>
           <ul class="sidenav grey lighten-2" id="mobile-menu">
             <li><a href="#">About</a></li>
@@ -292,6 +319,7 @@
         $(".datepicker").datepicker({
           disableWeekends: true,
         });
+        $(".tooltipped").tooltip();
       });
     </script>
   </body>
