--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <i class="material-icons">menu</i>
           </a>
           <ul class="right hide-on-med-and-down">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#photos">Photos</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li>
               <a
                 href="#"
@@ -89,7 +89,7 @@
             </li>
           </ul>
           <ul class="sidenav grey lighten-2" id="mobile-menu">
-            <li><a href="#">About</a></li>
+            <li><a href="#">Photos</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
@@ -97,7 +97,7 @@
       </nav>
     </header>
     <!-- photo / grid -->
-    <section class="container section" id="photos">
+    <section class="container section scrollspy" id="photos">
       <div class="row">
         <div class="col s12 l4">
           <img
@@ -162,7 +162,7 @@
       </div>
     </div>
     <!-- services / tabs -->
-    <section class="container section" id="services">
+    <section class="container section scrollspy" id="services">
       <div class="row">
         <div class="col s12 l4">
           <h2 class="indigo-text text-darken-4">
@@ -221,7 +221,7 @@
       </div>
     </div>
     <!-- contact form -->
-    <section class="section container" id="contact">
+    <section class="section container scrollspy" id="contact">
       <div class="row">
         <div class="col s12 l5">
           <h2 class="indigo-text text-darken-4">Get Intouch</h2>
