fix error with scrolling

--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
           disableWeekends: true,
         });
         $(".tooltipped").tooltip();
+        $(".scrollspy").scrollSpy();
       });
     </script>
   </body>
